Deployment/Envoy Config/http-envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: request-response-filter
  namespace: default
spec:
  workloadSelector:
    labels:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.lua
        typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
            inlineCode: |
              function envoy_on_request(request_handle)
                local headers = request_handle:headers()
                local headersMap = {}
                for key, value in pairs(headers) do
                  headersMap[key] = value
                end                
                request_handle:streamInfo():dynamicMetadata():set("envoy.lua","request_headers",headersMap)                    
                local requestBody = ""
                for chunk in request_handle:bodyChunks() do
                  if (chunk:length() > 0) then
                    requestBody = requestBody .. chunk:getBytes(0, chunk:length())
                  end
                end
                if (requestBody == nil or requestBody == "") then
                  requestBody = "moin leider ist der Body null"
                end

                -- request_handle:streamInfo():dynamicMetadata():set("envoy.lua","request_body",requestBody)
                request_handle:logErr("Test: Moin")
                -- request_handle:logCritical("body: " .. requestBody)

                local debugHeaders, debugBody = request_handle:httpCall(
                  "debugger_cluster",
                  {
                    [":method"] = "POST",
                    [":path"] = "/sayMoin",
                    [":authority"] = "music-store-review.default.svc.cluster.local"
                  },
                  "authorize call",
                  5000)

                request_handle:logCritical("after http: " .. debugBody)

                for dkey, dvalue in pairs(debugHeaders) do
                  request_handle:logCritical("debug header: " .. dkey)
                  request_handle:logCritical("debug value: " .. dvalue)
                end 

                
              end

              function envoy_on_response(response_handle)
                local headers = response_handle:headers()
                local headersMap = {}
                for key, value in pairs(headers) do
                  headersMap[key] = value
                end                
                response_handle:streamInfo():dynamicMetadata():set("envoy.lua","response_headers",headersMap)                    
                local responseBody = ""
                for chunk in response_handle:bodyChunks() do
                  if (chunk:length() > 0) then
                    responseBody = responseBody .. chunk:getBytes(0, chunk:length())
                  end
                end
                response_handle:streamInfo():dynamicMetadata():set("envoy.lua","response_body",responseBody)
                -- response_handle:logCritical("Response body: " .. responseBody)                  
              end
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        connect_timeout: 0.5s
        name: debugger_cluster
        type: STRICT_DNS  # static
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: debugger_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: music-store-review
                    port_value: 8888
